Fix running/debugging from NetBeans
NetBeans doesn't use the JAR Manifest settings for Add-Opens that we set in pom.xml.
Therefore we unfortunately have to duplicate these settings in the NetBeans configuration until someone finds a better way.